<resources>
    <string name="app_name">hotevents</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title">Title</string>
    <string name="dates">Dates</string>
    <string name="date">Date</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="location">Location</string>
    <string name="address">Address</string>
    <string name="description">Description</string>
    <string name="about_event">About Event...</string>
    <string name="check_in_qr_code">Check-In QR Code</string>
    <string name="create_new">Create New</string>
    <string name="choose_from_existing">Choose From Existing</string>
    <string name="create_event">Create Event</string>
    <string name="back_button_description">back button description</string>
    <string name="profile">"Profile "</string>
    <string name="fab_description">Add new item</string>
    <string name="edit_profie">Edit Profile</string>
    <string name="edit_name">Edit Name</string>
    <string name="edit_email">Edit Email</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="edit_location">Edit Location</string>
    <string name="save_profile">Save Profile</string>
    <string name="profile_button_description">Profile Button</string>
    <string name="edit_profile_photo">Edit Profile Photo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">User Name</string>
    <string name="browse_user_location">Location: City, Country</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="user_uid">user id</string>
    <string name="msg_token_fmt">message</string>
    <string name="remove_profile_photo">remove profile photo button</string>
    <string name="organised_events">Organized Events</string>
    <string name="browse_events">Events</string>
    <string name="admin_options">Admin Options</string>
    <string name="attendee_textview">List Of Attendees</string>
    <string name="notification">Notifications</string>
    <string name="start_date">mm/dd/yyyy</string>
    <string name="start_time">hh:mm</string>
    <string name="start_text">Start</string>
    <string name="end_text">End</string>

</resources>