<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <RelativeLayout
        android:id="@+id/editProfilePhotoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/edit_image_profile_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/default_profile3"
            android:layout_centerHorizontal="true"/>

        <ImageButton
            android:id="@+id/removeProfilePhotoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="16dp"
            android:layout_alignTop="@id/edit_image_profile_photo"
            android:layout_toEndOf="@id/edit_image_profile_photo"
            android:background="@android:color/transparent"
            android:contentDescription="@string/remove_profile_photo"
            android:src="@drawable/delete_profile_icon" />

        <ImageButton
            android:id="@+id/editProfilePhotoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="16dp"
            android:layout_alignBottom="@id/edit_image_profile_photo"
            android:layout_toEndOf="@id/edit_image_profile_photo"
            android:background="@android:color/transparent"
            android:contentDescription="@string/edit_profile_photo"
            android:src="@drawable/edit_icon" />
    </RelativeLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_name"
            android:fontFamily="@font/monsterrat_regular"
            android:minHeight="48dp"
            android:textColor="#5C8971"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_email"
            android:fontFamily="@font/monsterrat_regular"
            android:minHeight="48dp"
            android:inputType="textEmailAddress"
            android:textColor="#5C8971"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_contact"
            android:fontFamily="@font/monsterrat_regular"
            android:minHeight="48dp"
            android:inputType="phone"
            android:textColor="#5C8971"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_location"
            android:fontFamily="@font/monsterrat_regular"
            android:minHeight="48dp"
            android:textColor="#5C8971"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/saveProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_profile_button_border"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/textViewSaveProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/monsterrat_regular"
            android:text="@string/save_profile"
            android:textColor="#5C8971"
            android:textSize="18sp"
            android:textStyle="italic" />

        <ImageView
            android:id="@+id/imageViewSaveProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_save_button"/>
    </LinearLayout>

</LinearLayout>
