<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/edit_delete_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#5C8971"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="visible"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="-1dp">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/back_button_description"
            android:src="@drawable/ic_arrow_back_2" />

        <TextView
            android:id="@+id/textViewProfileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/monsterrat_regular"
            android:text="@string/profile"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/backButton"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/editProfilePhotoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/edit_delete_toolbar">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageViewProfilePhoto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/default_profile3"
            android:layout_centerHorizontal="true"/>

        <ImageButton
            android:id="@+id/removeProfilePhotoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="16dp"
            android:layout_alignTop="@id/imageViewProfilePhoto"
            android:layout_toEndOf="@id/imageViewProfilePhoto"
            android:background="@android:color/transparent"
            android:contentDescription="@string/remove_profile_photo"
            android:src="@drawable/delete_profile_icon" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="User Name"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:fontFamily="@font/monsterrat_regular"
        android:gravity="center"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/editProfilePhotoLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Email: User@example.com"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:fontFamily="@font/monsterrat_regular"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/textViewName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/textViewPhoneNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Phone Number: 123-456-7890"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:fontFamily="@font/monsterrat_regular"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/textViewEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/textViewLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/browse_user_location"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:fontFamily="@font/monsterrat_regular"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/textViewPhoneNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <!-- Edit and Delete Profile Buttons -->
    <LinearLayout
        android:id="@+id/linearEditDeleteProfile"
        android:layout_width="235dp"
        android:layout_height="71dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewLocation">

        <!-- Edit Profile Button -->

        <!-- Add space between buttons -->
        <Space
            android:layout_width="8dp"
            android:layout_height="wrap_content" />

        <!-- Delete Profile Button -->
        <LinearLayout
            android:id="@+id/linearDeleteProfile"
            android:layout_width="426dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/edit_profile_button_border"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageViewDeleteProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_delete_profile_button" />

            <TextView
                android:id="@+id/textViewDeleteProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/monsterrat_regular"
                android:text="@string/delete_profile"
                android:textColor="#5C8971"
                android:textSize="16sp"
                android:textStyle="italic" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
